--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-
   "engines": {
     "node": ">=18.18.0"
   },
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,7 +13,6 @@
     "lint": "eslint .",
     "test": "vitest run"
   },
-
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -51,6 +48,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.29.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -67,12 +65,11 @@
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
