--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "backend",
+  "name": "cbe-ai-backend",
   "version": "1.0.0",
-  "description": "This directory is reserved for backend-related files.",
-  "main": "index.js",
+  "description": "AI Backend for CBE Education Platform",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "groq-sdk": "^0.37.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "groq-sdk": "^0.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
