--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "cbe-ai-backend",
+  "name": "cbc-education-system",
   "version": "1.0.0",
-  "description": "AI Backend for CBE Education Platform",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node index.js",
+    "build": "echo 'No build required'"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "groq-sdk": "^0.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "groq-sdk": "^0.3.3",
+    "cors": "^2.8.5"
   }
 }
