--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,15 +1,14 @@
 {
   "name": "cbc-education-system",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node index.js",
     "build": "echo 'No build required'"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "groq-sdk": "^0.3.3"
+    "groq-sdk": "^0.3.3",
+    "cors": "^2.8.5"
   }
 }
