--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "cbc-education-system",
+  "name": "cbe-ai-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "echo 'No build required'"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "groq-sdk": "^0.3.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "groq-sdk": "^0.3.2"
   }
 }
