--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "cbe-ai-backend",
+  "name": "cbc-education-backend",
   "version": "1.0.0",
+  "description": "AI Assistant backend for CBC Education System",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "echo 'No build needed'",
+    "dev": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "groq-sdk": "^0.3.2"
+    "express": "^4.18.2",
+    "groq-sdk": "^0.5.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
