--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "groq-sdk": "^0.5.0"
+    "openai": "^4.28.0"
   },
   "engines": {
     "node": ">=18.0.0"
