--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+.env.production
+/backend/.env
+/frontend/.env
+
 
 # Editor directories and files
 .vscode/*
