--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,7 @@ OPENROUTER_API_KEY=sk-or-v1-c56184e7a69ecbc861fd20772a04bfbf9b66faa7afb98a67340b
 
 # Server Configuration
 PORT=3001
+ 
+# Supabase Configuration
+SUPABASE_URL=https://flkgcmrrpgcpemcitzht.supabase.co
+SUPABASE_ANON_KEY=sb_publishable_CUT57nvkYqc79TK757BuHQ_6Zxxe0t8
