--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,19 +1,36 @@
 {
   "name": "cbc-education-backend",
   "version": "1.0.0",
-  "description": "AI Assistant backend for CBC Education System",
+  "description": "Enterprise-grade CBC Education System backend with secure authentication",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "build": "echo 'No build needed'",
-    "dev": "node src/index.js"
+    "test": "jest",
+    "lint": "eslint src/**/*.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cookie-parser": "^1.4.6",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.28.0"
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "openai": "^4.28.0",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "jest": "^29.7.0",
+    "eslint": "^8.56.0"
   },
   "engines": {
     "node": ">=18.0.0"
